# serializer version: 1
# name: test_update_projection_aggregated
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a28308280e7fff',
      'BUCKETED_H3_L11': '8b28308280e2fff',
      'BUCKETED_H3_L12': '8c28308280e27ff',
      'BUCKETED_H3_L13': '8d28308280e277f',
      'BUCKETED_H3_L14': '8e28308280e2777',
      'BUCKETED_H3_L15': '8f28308280e2775',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '8928308280fffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7759,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41839999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830828707fff',
      'BUCKETED_H3_L11': '8b2830828701fff',
      'BUCKETED_H3_L12': '8c28308287017ff',
      'BUCKETED_H3_L13': '8d28308287017bf',
      'BUCKETED_H3_L14': '8e2830828701797',
      'BUCKETED_H3_L15': '8f2830828701790',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '89283082873ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7789,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41539999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082871ffff',
      'BUCKETED_H3_L11': '8b283082871afff',
      'BUCKETED_H3_L12': '8c283082871abff',
      'BUCKETED_H3_L13': '8d283082871ab7f',
      'BUCKETED_H3_L14': '8e283082871ab77',
      'BUCKETED_H3_L15': '8f283082871ab70',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '89283082873ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.779900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4144,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a28308286b7fff',
      'BUCKETED_H3_L11': '8b28308286b1fff',
      'BUCKETED_H3_L12': '8c28308286b1bff',
      'BUCKETED_H3_L13': '8d28308286b1bbf',
      'BUCKETED_H3_L14': '8e28308286b1b97',
      'BUCKETED_H3_L15': '8f28308286b1b92',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '8928308286bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.782900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4114,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830828697fff',
      'BUCKETED_H3_L11': '8b2830828690fff',
      'BUCKETED_H3_L12': '8c28308286901ff',
      'BUCKETED_H3_L13': '8d283082869017f',
      'BUCKETED_H3_L14': '8e2830828690177',
      'BUCKETED_H3_L15': '8f2830828690170',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '8928308286bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7839,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4104,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa5ffff',
      'BUCKETED_H3_L11': '8b283082aa5afff',
      'BUCKETED_H3_L12': '8c283082aa5a5ff',
      'BUCKETED_H3_L13': '8d283082aa5a57f',
      'BUCKETED_H3_L14': '8e283082aa5a567',
      'BUCKETED_H3_L15': '8f283082aa5a561',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7869,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4074,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_12',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aacffff',
      'BUCKETED_H3_L11': '8b283082aacdfff',
      'BUCKETED_H3_L12': '8c283082aacd5ff',
      'BUCKETED_H3_L13': '8d283082aacd57f',
      'BUCKETED_H3_L14': '8e283082aacd577',
      'BUCKETED_H3_L15': '8f283082aacd572',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aafffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7879,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40639999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_13',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a357fff',
      'BUCKETED_H3_L11': '8b283082a352fff',
      'BUCKETED_H3_L12': '8c283082a3529ff',
      'BUCKETED_H3_L13': '8d283082a35297f',
      'BUCKETED_H3_L14': '8e283082a352967',
      'BUCKETED_H3_L15': '8f283082a352961',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a37ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7909,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40339999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_16',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a207fff',
      'BUCKETED_H3_L11': '8b283082a205fff',
      'BUCKETED_H3_L12': '8c283082a2059ff',
      'BUCKETED_H3_L13': '8d283082a20597f',
      'BUCKETED_H3_L14': '8e283082a20590f',
      'BUCKETED_H3_L15': '8f283082a205909',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a23ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.791900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4024,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_17',
    }),
  ])
# ---
# name: test_update_projection_individual_points
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a28308280e7fff',
      'BUCKETED_H3_L11': '8b28308280e2fff',
      'BUCKETED_H3_L12': '8c28308280e27ff',
      'BUCKETED_H3_L13': '8d28308280e277f',
      'BUCKETED_H3_L14': '8e28308280e2777',
      'BUCKETED_H3_L15': '8f28308280e2775',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '8928308280fffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7759,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41839999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a28308280d7fff',
      'BUCKETED_H3_L11': '8b28308280d5fff',
      'BUCKETED_H3_L12': '8c28308280d57ff',
      'BUCKETED_H3_L13': '8d28308280d573f',
      'BUCKETED_H3_L14': '8e28308280d571f',
      'BUCKETED_H3_L15': '8f28308280d571d',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '8928308280fffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.776900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4174,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082872ffff',
      'BUCKETED_H3_L11': '8b283082872cfff',
      'BUCKETED_H3_L12': '8c283082872c7ff',
      'BUCKETED_H3_L13': '8d283082872c7bf',
      'BUCKETED_H3_L14': '8e283082872c7af',
      'BUCKETED_H3_L15': '8f283082872c7ae',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '89283082873ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7779,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4164,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830828707fff',
      'BUCKETED_H3_L11': '8b2830828701fff',
      'BUCKETED_H3_L12': '8c28308287017ff',
      'BUCKETED_H3_L13': '8d28308287017bf',
      'BUCKETED_H3_L14': '8e2830828701797',
      'BUCKETED_H3_L15': '8f2830828701790',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '89283082873ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7789,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41539999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082871ffff',
      'BUCKETED_H3_L11': '8b283082871afff',
      'BUCKETED_H3_L12': '8c283082871abff',
      'BUCKETED_H3_L13': '8d283082871ab7f',
      'BUCKETED_H3_L14': '8e283082871ab77',
      'BUCKETED_H3_L15': '8f283082871ab70',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '89283082873ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.779900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4144,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830828637fff',
      'BUCKETED_H3_L11': '8b283082878dfff',
      'BUCKETED_H3_L12': '8c283082878dbff',
      'BUCKETED_H3_L13': '8d283082878db3f',
      'BUCKETED_H3_L14': '8e283082878db1f',
      'BUCKETED_H3_L15': '8f283082878db1d',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '8928308287bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7809,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4134,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a28308286a7fff',
      'BUCKETED_H3_L11': '8b28308286a4fff',
      'BUCKETED_H3_L12': '8c28308286a4bff',
      'BUCKETED_H3_L13': '8d28308286a4bbf',
      'BUCKETED_H3_L14': '8e28308286a4b87',
      'BUCKETED_H3_L15': '8f28308286a4b85',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '8928308287bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7819,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41239999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a28308286b7fff',
      'BUCKETED_H3_L11': '8b28308286b1fff',
      'BUCKETED_H3_L12': '8c28308286b1bff',
      'BUCKETED_H3_L13': '8d28308286b1bbf',
      'BUCKETED_H3_L14': '8e28308286b1b97',
      'BUCKETED_H3_L15': '8f28308286b1b92',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '8928308286bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.782900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4114,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830828697fff',
      'BUCKETED_H3_L11': '8b2830828690fff',
      'BUCKETED_H3_L12': '8c28308286901ff',
      'BUCKETED_H3_L13': '8d283082869017f',
      'BUCKETED_H3_L14': '8e2830828690177',
      'BUCKETED_H3_L15': '8f2830828690170',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308287fffff',
      'BUCKETED_H3_L9': '8928308286bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7839,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4104,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa6ffff',
      'BUCKETED_H3_L11': '8b283082aa6efff',
      'BUCKETED_H3_L12': '8c283082aa6e1ff',
      'BUCKETED_H3_L13': '8d283082aa6e13f',
      'BUCKETED_H3_L14': '8e283082aa6e11f',
      'BUCKETED_H3_L15': '8f283082aa6e118',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_10',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa47fff',
      'BUCKETED_H3_L11': '8b283082aa43fff',
      'BUCKETED_H3_L12': '8c283082aa431ff',
      'BUCKETED_H3_L13': '8d283082aa431bf',
      'BUCKETED_H3_L14': '8e283082aa43187',
      'BUCKETED_H3_L15': '8f283082aa43181',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.785900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4084,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_11',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa5ffff',
      'BUCKETED_H3_L11': '8b283082aa5afff',
      'BUCKETED_H3_L12': '8c283082aa5a5ff',
      'BUCKETED_H3_L13': '8d283082aa5a57f',
      'BUCKETED_H3_L14': '8e283082aa5a567',
      'BUCKETED_H3_L15': '8f283082aa5a561',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7869,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4074,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_12',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aacffff',
      'BUCKETED_H3_L11': '8b283082aacdfff',
      'BUCKETED_H3_L12': '8c283082aacd5ff',
      'BUCKETED_H3_L13': '8d283082aacd57f',
      'BUCKETED_H3_L14': '8e283082aacd577',
      'BUCKETED_H3_L15': '8f283082aacd572',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aafffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7879,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40639999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_13',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a367fff',
      'BUCKETED_H3_L11': '8b283082a364fff',
      'BUCKETED_H3_L12': '8c283082a3645ff',
      'BUCKETED_H3_L13': '8d283082a36453f',
      'BUCKETED_H3_L14': '8e283082a36451f',
      'BUCKETED_H3_L15': '8f283082a36451a',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082aafffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.788900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4054,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_14',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a377fff',
      'BUCKETED_H3_L11': '8b283082a371fff',
      'BUCKETED_H3_L12': '8c283082a3715ff',
      'BUCKETED_H3_L13': '8d283082a3715bf',
      'BUCKETED_H3_L14': '8e283082a371587',
      'BUCKETED_H3_L15': '8f283082a371580',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a37ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7899,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4044,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_15',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a357fff',
      'BUCKETED_H3_L11': '8b283082a352fff',
      'BUCKETED_H3_L12': '8c283082a3529ff',
      'BUCKETED_H3_L13': '8d283082a35297f',
      'BUCKETED_H3_L14': '8e283082a352967',
      'BUCKETED_H3_L15': '8f283082a352961',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a37ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7909,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40339999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_16',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a207fff',
      'BUCKETED_H3_L11': '8b283082a205fff',
      'BUCKETED_H3_L12': '8c283082a2059ff',
      'BUCKETED_H3_L13': '8d283082a20597f',
      'BUCKETED_H3_L14': '8e283082a20590f',
      'BUCKETED_H3_L15': '8f283082a205909',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a23ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.791900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4024,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_17',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a207fff',
      'BUCKETED_H3_L11': '8b283082a21cfff',
      'BUCKETED_H3_L12': '8c283082a21c9ff',
      'BUCKETED_H3_L13': '8d283082a21c93f',
      'BUCKETED_H3_L14': '8e283082a21c91f',
      'BUCKETED_H3_L15': '8f283082a21c91a',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a23ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7929,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4014,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_18',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a2affff',
      'BUCKETED_H3_L11': '8b283082a2a9fff',
      'BUCKETED_H3_L12': '8c283082a2a99ff',
      'BUCKETED_H3_L13': '8d283082a2a99bf',
      'BUCKETED_H3_L14': '8e283082a2a9987',
      'BUCKETED_H3_L15': '8f283082a2a9983',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a2bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.PHOTO: 'PHOTO'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7939,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40039999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_19',
    }),
  ])
# ---
